# ProMis

./: .buildinfo  .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  api.html  checks.sh  genindex.html  gui.html  gui_quick_start.html  index.html  installation.html  movement.pl  objects.inv  promis-ships.ipynb  promis.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  setup.sh  setup_dev.sh  star_map.html
.devcontainer/: devcontainer.json
.doctrees/: api.doctree  gui.doctree  gui_quick_start.doctree  index.doctree  installation.doctree  promis.doctree  star_map.doctree
GUI/: README.md  docker-compose.yml
_modules/: index.html
_sources/: gui.rst.txt  gui_quick_start.rst.txt  installation.rst.txt  promis.rst.txt  star_map.rst.txt
_static/: documentation_options.js
data/: vessel_types.json  vessel_types_simplified.json
estimators/: estimators.html
examples/: Weibull Distribution.ipynb  coco-FD.ipynb  coco.ipynb  cofi-maritime.ipynb  mini_data.csv  movement.pl  particle-filter.ipynb  promis-ships.ipynb  promis.ipynb  record_test_run.py  streaming.py  usage.ipynb  used_charts.txt
geo/: collection.html  geo.html  geospatial.html  location.html  map.html  polygon.html  polyline.html  raster_band.html
gui/: README.md  docker-compose.yml  example.md
loaders/: loaders.html  osm_loader.html  spatial_loader.html
logic/: logic.html  solver.html
models/: Bay.pl  Crossing.pl  Park.pl  Rails.pl
notebooks/: coco-2.html  coco.html  coco.ipynb  cofi-maritime.html  usage.html
prolog_lib/: ais_parsing.pl
promis/: __init__.py  coco.py  promis.py  star_map.py
scripts/: build_gui.sh  build_gui_dev.sh  checks.sh
(+275 files in other folders)
